tests/fixtures/LatestTests/VariableDeclarationTests/errors/reassignment_type_mismatch_int64_to_int32.fg
/; EXPECT_ERROR: AssignmentExpressionTypeMismatch
var x:int = 10
x <- 10000000000l

